[package]
name = "ambiq-hal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.6"
cortex-m = "0.7.3"

[dependencies.ambiq-hal-sys]
path = "../ambiq-hal-sys"

[dependencies.ambiq-apollo3-pac]
path = "../../ambiq_apollo3/ambiq-apollo3-pac"
