[package]
name = "sby-buoy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.7", features = [ "serde", "ufmt-impl", "defmt-impl" ] }
panic-halt = "0.2.0"
serde = { version = "1", features = ["derive"], default-features = false }
serde-json-core = "0.4.0"
cortex-m-rt = "0.7.0"
ufmt = "0.1.0"
nb = "1.0.0"
defmt = "0.2.3"
embedded-hal = "0.2.6"

[dependencies.sby-proto]
path = "../sby-proto"

# [dependencies.ambiq-hal-sys]
# path = "../../../dev/ambiq-rs/ambiq-hal-sys"

[dependencies.ambiq-hal]
path = "../../../dev/ambiq-rs/ambiq-hal"
features = ["ambiq-sdk", "sparkfun-redboard"]

[features]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

default = [ "defmt-trace" ]
