[package]
name = "sby-data"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.5"
csv = "1.1.6"
env_logger = "0.9.0"
log = "0.4.14"
serde = "1.0.130"
tokio = { version = "1.12.0", features = [ "full" ] }
