[workspace]
members = [ "target-test", "sfy", "sfy-main" ]

[patch.crates-io]
# ism330dhcx = { git = "https://github.com/gauteh/ism330dhcx", branch = "fifo" }
cmsis_dsp = { git = "https://github.com/samcrow/cmsis_dsp.rs" }
embedded-sdmmc = { git = "https://github.com/gauteh/embedded-sdmmc-rs", branch = "more-defmt" }
# embedded-sdmmc = { path = "../../../../dev/embedded/embedded-sdmmc-rs" }

# [patch.'https://github.com/gauteh/ahrs-fusion']
# ahrs-fusion = { path = "../../../../dev/embedded/imu/ahrs-fusion" }

# [patch.'https://github.com/gauteh/notecard-rs']
# notecard = { path = "../../../../dev/embedded/notecard-rs" }

# [patch.'https://github.com/gauteh/ambiq-rs']
# ambiq-hal = { path = "../../../../dev/ambiq-rs/ambiq-hal" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
