[package]
name = "sfy-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.6"
color-eyre = "0.5.11"
csv = "1.1.6"
env_logger = "0.9.0"
eyre = "0.6.5"
log = "0.4.14"
rustbreak = "2.0.0"
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1.12.0", features = [ "full" ] }
toml = "0.5.8"
warp = "0.3.1"
bytes = "1.1.0"
futures-util = "0.3.18"
serde_json = "1.0.72"
sanitize-filename = "0.3.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "sqlite", "postgres", "any", "macros", "migrate", "offline", "chrono" ] }
percent-encoding = "2.1.0"
base64 = "0.13.0"

