[package]
name = "sby-proto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.7", features = [ "serde" ] }
postcard = "0.7.2"
serde = { version = "1", default-features = false, features = [ "derive" ] }

[dev-dependencies]
serde_json = "1"
