cargo-features = [ "per-package-target" ]

[package]
name = "sfy-artemis"
version = "0.1.0"
edition = "2021"
authors = [ "Gaute Hope <gauteh@met.no>" ]
resolver = "2"
forced-target = "thumbv7em-none-eabihf"


[dependencies]
heapless = { version = "0.7", features = [ "serde", "ufmt-impl", "defmt-impl" ] }
serde = { version = "1", features = ["derive"], default-features = false }
serde-json-core = "0.4.0"
cortex-m = "*"
cortex-m-rt = "0.7.0"
nb = "1.0.0"
embedded-hal = "0.2.6"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
ism330dhcx = "0.4.0"
cmsis_dsp = { version = "0.1.0", features = [ "micromath" ] }
bytemuck = "1.7.2"
base64 = { version = "0.13.0", default-features = false }
half = { version = "1.8.2", features = [ "use-intrinsics", "bytemuck", "serde" ] }
chrono = { version = "0.4.19", default-features = false }
git-version = "0.3.5"
sfy = { path = "../", default-features = false }
defmt-serial = { version = "0.5.0", optional = true }
ufmt = { version = "0.1.0", optional = true }

[dependencies.ambiq-hal]
version = "0.2"
features = ["ambiq-sdk", "sparkfun-redboard-nano", "rt"]
git = "https://github.com/gauteh/ambiq-rs"

[dev-dependencies]


[features]
default = [ "deploy" ]
continuous = [ "sfy/continuous" ]
20Hz = [ "sfy/20Hz" ]
raw = [ "sfy/raw" ]
deploy = []
defmt-serial = [ "dep:ufmt", "dep:defmt-serial" ]

