cargo-features = [ "per-package-target" ]

[package]
name = "sfy-artemis"
version = "0.1.0"
edition = "2021"
authors = [ "Gaute Hope <gauteh@met.no>" ]
resolver = "2"
forced-target = "thumbv7em-none-eabihf"


[dependencies]
heapless = { version = "0.7", features = [ "serde", "ufmt-impl", "defmt-impl" ] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
embedded-hal = "0.2.6"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cmsis_dsp = { version = "0.1.0", features = [ "micromath" ] }
sfy = { path = "../", default-features = false }
git-version = "0.3.5"
chrono = { version = "0.4.19", default-features = false }
defmt-serial = { version = "0.5.0", optional = true }
ufmt = { version = "0.1.0", optional = true }

[dependencies.ambiq-hal]
version = "0.2"
features = ["ambiq-sdk", "sparkfun-redboard-nano", "rt"]
git = "https://github.com/gauteh/ambiq-rs"

[dev-dependencies]


[features]
default = [ "deploy" ]
continuous = [ "sfy/continuous" ]
20Hz = [ "sfy/20Hz" ]
raw = [ "sfy/raw" ]
fir = [ "sfy/fir" ]
deploy = []
defmt-serial = [ "dep:ufmt", "dep:defmt-serial" ]

