[package]
name = "sfy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sfypack"
required-features = [ "build-bin" ]

[dependencies]
base64 = { version = "0.13.0", default-features = false }
defmt = "0.3.2"
bytemuck = "1.7.2"
half = { version = "1.8.2", features = [ "use-intrinsics", "bytemuck", "serde" ] }
heapless = { version = "0.7", features = [ "serde", "ufmt-impl", "defmt-impl" ] }
postcard = "0.7.3"
serde = { version = "1", features = ["derive"], default-features = false }
argh = { version = "0.1.7", optional = true }
anyhow = { version = "1.0.57", optional = true }


[features]
default = [ "build-bin" ]
build-bin = ["argh"]
