[package]
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
name = "test-target"
publish = false
edition = "2021"
version = "0.1.0"

[[test]]
name = "test"
harness = false

[[test]]
name = "imu_ism330dhcx"
harness = false

[[test]]
name = "gps"
harness = false

[[test]]
name = "cellular"
harness = false

[[test]]
name = "cellular_sensor_data"
harness = false

[dependencies]
sfy = { path = ".." }
heapless = { version = "0.7", features = [ "serde", "ufmt-impl", "defmt-impl" ] }
serde = { version = "1", features = ["derive"], default-features = false }
serde-json-core = "0.4.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
defmt-test = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[dependencies.ambiq-hal]
path = "../../../../../dev/ambiq-rs/ambiq-hal"
features = ["sparkfun-redboard-nano", "rt"]

