[package]
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
name = "testsuite"
publish = false
edition = "2021"
version = "0.1.0"

[lib]
harness = false

[[test]]
name = "test"
harness = false

[dependencies]
sfy-buoy = { path = ".." }
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
defmt-test = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[dependencies.ambiq-hal]
path = "../../../../../dev/ambiq-rs/ambiq-hal"
features = ["sparkfun-redboard-nano", "rt"]

